wip: adding CLI to main
