# go/pkg/pwapi/pwapi.pb.gw.go
@@ -2072,7 +2072,7 @@ var (
 
 	pattern_Service_AdminRedump_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"admin", "redump"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_Service_AdminChallengeAdd_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"admin", "add-challenge"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_Service_AdminChallengeAdd_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"admin", "challenge", "add"}, "", runtime.AssumeColonVerbOpt(true)))
 )
 
 var (
